<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.add_story.AddStoryActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:title="@string/add_story"
        android:titleTextColor="@color/colorOnPrimary"
        android:navigationIcon="@drawable/baseline_arrow_back_24" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="30dp">

            <ImageView
                android:id="@+id/iv_add_photo"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/story_photo"
                android:src="@drawable/baseline_add_a_photo_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Theme.Material3.DayNight"
                    android:text="@string/camera" />

                <Button
                    android:id="@+id/btn_gallery"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Theme.Material3.DayNight"
                    android:text="@string/gallery" />

            </LinearLayout>

            <EditText
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/add_story_content"
                android:textAlignment="textStart"
                android:inputType="textMultiLine"
                android:lines="4"
                android:maxLines="7" />

            <Button
                android:id="@+id/button_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_story" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>